# vtb-benefits-system

./: .dockerignore  .env.example  Cargo.toml  README.md  docker-compose.yml  statement.json
crates/benefit-api/: Cargo.toml
crates/benefit-domain/: Cargo.toml
crates/benefits-api/: Cargo.toml
crates/benefits-api/src/: config.rs  lib.rs  main.rs
crates/benefits-api/src/routes/: health.rs  mod.rs  request.rs
crates/benefits-backend/: Cargo.toml
crates/benefits-backend/src/: config.rs  lib.rs  main.rs
crates/benefits-backend/src/routes/: health.rs  mod.rs  request.rs
crates/benefits-frontend/: Cargo.toml
crates/benefits-frontend/src/: main.rs
crates/benefits-frontend/static/: app.css  app.js  benefits-data.js  index.html
crates/statement-pdf/: Cargo.toml
crates/statement-pdf/src/: error.rs  lib.rs  main.rs  model.rs  render.rs  typst_engine.rs  validation.rs
crates/statement-pdf/templates/: statement.typ
crates/statement-pdf/tests/: generate_pdf.rs
crates/statement-pdf/tests/fixtures/: statement.json
deploy/: Caddyfile  backend.Dockerfile  frontend.Dockerfile
docs/03-backlog/: backlog.md
