[package]
name = "benefits-api"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
serde_json = "1"
statement-pdf.workspace = true
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
