[package]
name = "statement-pdf"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
ecow = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
typst = "0.14.2"
typst-kit = { version = "0.14.2", default-features = false, features = ["embed-fonts", "fonts"] }
typst-pdf = "0.14.2"

[dev-dependencies]
tempfile = "3"
