[package]
name = "statement-pdf"
version = "0.0.1"
edition.workspace = true

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
ecow = "0.2.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
typst = "0.14.2"
typst-kit = { version = "0.14.2", default-features = false, features = [
    "embed-fonts",
    "fonts",
] }
typst-pdf = "0.14.2"

[dev-dependencies]
tempfile = "3.27.0"
